# svp_robot

./: .gitignore  .gitlab-ci.yml  .pylintrc  .robocop  Dockerfile  README.md  interactive_console_output.xml  log.html  output.xml  playwright-log.txt  pyproject.toml  report.html
Libraries/: CSVHelper.py  FileHelper.py  LocatorFunction.py  Utils.py  csv_helper.py  random_manager.py  translate_to_arabic.py
Libraries/Api/: test_api.py
Libraries/email/: EmailClient.py  EmailSupport.py  email_client.py  email_support.py
Libraries/logger/: logging.yaml  yaml_logger.py
POM/Locators/: AdminBaseLocators.py  AdminCategoriesLocators.py  AdminCertificateBalanceLocators.py  AdminCertificatePriceLocators.py  AdminCountryLocators.py  AdminCsvHistoryPageLocators.py  AdminInvoiceHistoryPageLocators.py  AdminLaborAttachesLocators.py  AdminLaborsLocators.py  AdminLaborsResultLocators.py  AdminLandingPageLocators.py  AdminLogPageLocators.py  AdminOccupationLocators.py  AdminPrivacyPolicyLocators.py  AdminTableSpaceLocators.py  AdminTermsUseLocators.py  AdminTestCentersLocators.py  AdminTransactionsLogLocators.py  AdminUserGuideLocators.py  BaseLocators.py  DashboardLocators.py  IndividualBaseLocators.py  IndividualBookingLocators.py  IndividualRegistrationLocators.py  LegislatorsPageLocators.py  LoginLocators.py  PasswordPageLocators.py  SPAAccountLocators.py  SPAAssessorsLocators.py  SPAAssessorsRegistration.py  SPAChangePasswordLocators.py  SPACheckCertificateExamLocators.py  SPAExamSessionLocators.py  SPALaborLocator.py  SPALaborLocators.py  SPALaborLocatorsLegislator.py  SPALaborLocatorsTCentr.py  SPALocators.py  SPAPaymentLocators.py  SPAReportsLocator.py  (+6 more)
Resources/Setup/: send_allure_report.py  ui_tests_count.py  webdriver_manager.resource  webdriver_manager.robot
Resources/Variables/: AdminSpaceData.py  AssessorsData.py  Authentication.py  CategoriesIdsDataset.py  Countries.py  Status.py  (+28 more)
(+173 files in other folders)
