[tool.poetry]
name = "svp_robot"
version = "1.0.0"
description = "This project is for Automating SVP testing Using Robot"
authors = []
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "~3.10"
robotframework = "^6.0.2"
robotframework-pabot = "^2.11.0"
robotframework-jsonlibrary = "^0.5"
robotframework-browser = "16.0.0"
robotframework-robocop = "^2.7.0"
allure-robotframework = "^2.12.0"
PyPDF2 = "3.0.1"
requests = "2.28.2"
pylint = "^2.16.2"
pylint_gitlab = "1.2.0"
jwt = "1.3.1"
cerberus = '1.3.4'
PyYAML = "6.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
